gcc/testsuite/gm2/pim/fail/badmodvar.mod
MODULE badmodvar ;

VAR
   x: y ;
BEGIN

END badmodvar.
